1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* init.c: Add #include <sys/mman.h> for munmap decl.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* init.c (reboot_system): Use munmap instead of vm_deallocate.
	(frob_kernel_process): Likewise.
	(kill_everyone): Likewise.

1999-06-19  Roland McGrath  <roland@baalperazim.frob.com>

	* Makefile (HURDLIBS): Add ports and fshelp only if $(split-init)!=yes.

	* init.c (open_console): Put this function inside [! SPLIT_INIT].

1999-06-18  Roland McGrath  <roland@baalperazim.frob.com>

	* init.c [SPLIT_INIT] (child_pid, child_task): New variables.
	(process_signal, start_child, launch_something, launch_system): New
	functions.
	[! SPLIT_INIT] (system_state, shell_pid, rc_pid, launch_single_user,
	process_rc_script, launch_multi_user, launch_system, kill_everyone,
	kill_multi_user, process_signal): Variables and functions put inside
	#ifndef SPLIT_INIT.
	* stubs.c: New file, modified from ../proc/stubs.c.
	* Makefile (SRCS): Remove ttys.c here.
	[$(split-init) = yes] (SRCS): Add stubs.c
	[$(split-init) = yes] (init-CPPFLAGS): New variable, -DSPLIT_INIT.
	[$(split-init) = no] (SRCS): Add ttys.c only here.
	[$(split-init) = no] (LDLIBS): Put defn (-lutil) under this test.
	(split-init): New variable to turn on split-init, commented out.

1999-06-15  Roland McGrath  <roland@baalperazim.frob.com>

	* init.c (booted): New variable.
	(open_console): Use that instead of system_state.
	(S_startup_essential_task): Likewise.
	(do_mach_notify_dead_name): Likewise.
	(launch_system): New function.
	(S_startup_essential_task): Call it.

	* init.c (global_argv): Make static.

	* init.c (startup_envz, startup_envz_len): New variables.
	(run, run_for_real): Use those for child environment.
	(main): Set them up from our ENVP argument.

1999-06-14  Roland McGrath  <roland@baalperazim.frob.com>

	* init.c (main): Barf if run in a normal Hurd environment (not boot).

	* init.c (record_essential_task): Add missing return.
