@@ -2,6 +2,10 @@
 
 	* init.c: Add #include <sys/mman.h> for munmap decl.
 
+1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* init.c (frob_kernel_process): Use mmap instead of vm_allocate.
+
 1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* init.c (reboot_system): Use munmap instead of vm_deallocate.
